--- a/documentazione/html/md_README.html
+++ b/documentazione/html/md_README.html
@@ -78,8 +78,12 @@ $(function() {
 <div class="line"> </div>
 <div class="line">```$ gcc exercise.c</div>
 </div><!-- fragment --><p>to compile with standard filename a.out and execute in the same line:</p>
-<p><code>$ gcc exercise.c ; ./a.out</code> </p>
-</div></div><!-- contents -->
+<div class="fragment"><div class="line"> {$}</div>
+<div class="line"> </div>
+<div class="line">documentation:</div>
+<div class="line"> </div>
+<div class="line">```$ documentazione/html</div>
+</div><!-- fragment --> </div></div><!-- contents -->
 </div><!-- PageDoc -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
